Add/Remove for CMS UnsignedAttributes and Certificates (#29408)
* Initial implementation for Add/RemoveUnsignedAttribute

* initial implementation for Add/RemoveCertificate

* Add/RemoveUnsignedAttribute tests

* add tests for Add/RemoveCert

* apply feedback

* apply missed feedback

* make ReReadSugnedCms take reference

* Fix test to compare bytes of Rfc3161TimestampTokenInfo.SerialNumber

* change AddUnsignedAttribute to more compact and fix RemoveCounterSignature

* apply review feedback

* add test for RemoveCounterSignature

* regenerate repro document with correct settings for DSA counter-signature

* disable test on netfx

* apply feedback

--- a/src/System.Security.Cryptography.Pkcs/src/Resources/Strings.resx
+++ b/src/System.Security.Cryptography.Pkcs/src/Resources/Strings.resx
@@ -286,4 +286,13 @@
   <data name="Cryptography_WriteEncodedValue_OneValueAtATime" xml:space="preserve">
     <value>The input to WriteEncodedValue must represent a single encoded value with no trailing data.</value>
   </data>
+  <data name="Cryptography_Cms_NoAttributeFound" xml:space="preserve">
+    <value>Attribute not found.</value>
+  </data>
+  <data name="Cryptography_Cms_NoCertificateFound" xml:space="preserve">
+    <value>Certificate not found.</value>
+  </data>
+  <data name="Cryptography_Cms_CertificateAlreadyInCollection" xml:space="preserve">
+    <value>Certificate already present in the collection.</value>
+  </data>
 </root>
