--- a/src/System.Private.Xml/src/Resources/Strings.resx
+++ b/src/System.Private.Xml/src/Resources/Strings.resx
@@ -3447,4 +3447,7 @@ Usage: dotnet {0} [--assembly &lt;assembly file path&gt;] [--type &lt;type name&
   <data name="GenerateSerializerNotFound" xml:space="preserve">
     <value>Method 'System.Xml.Serialization.XmlSerializer.GenerateSerializer' was not found. This is likely because you are using an older version of the framework. Please update to .NET Core v2.1 or later.</value>
   </data>
+  <data name="XmlSerializerExpiredDetails" xml:space="preserve">
+    <value>Pre-generated serializer '{0}' has expired. You need to re-generate serializer for '{1}'.</value>
+  </data>
 </root>
