ProtectedData: add DataProtectionScope parameter check

--- a/src/System.Security.Cryptography.ProtectedData/src/Resources/Strings.resx
+++ b/src/System.Security.Cryptography.ProtectedData/src/Resources/Strings.resx
@@ -58,6 +58,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Arg_EnumIllegalVal" xml:space="preserve">
+    <value>Illegal enum value: {0}.</value>
+  </data>
   <data name="Cryptography_DpApi_ProfileMayNotBeLoaded" xml:space="preserve">
     <value>The data protection operation was unsuccessful. This may have been caused by not having the user profile loaded for the current thread's user context, which may be the case when the thread is impersonating.</value>
   </data>
