GH Issue #15652 SqlFileStream Implementation (#29879)
* Initial port of SqlFileStream

* Added SqlFileStreamTest

* Cleanup code

* Updated file paths after catchup merge.

* Added newline at the end of Strings.resx

* Fixed cosmetic changes

* Replaced null SafeHandle call

* Added headers to SqlFileStreamTest.cs

* Addressed review feedback by Stephen and Jeremy

* Fixed filename UnSupported.cs to Unsupported.cs to match case in Linux builds.

* Addressed review comments

* Made SqlFileStream netcoreapp and windows specific.

* Update EaName to include Null Terminator

* Fixed cosmetic issues

* Addressed Dan's review feedback.
Removed initially added file Interop.GetFullPathName.cs as is it no longer being used.

* Addressed Jeremy's review comments.

* Addressed Jeremy's review comments about style polish.

--- a/src/System.Data.SqlClient/src/Resources/Strings.resx
+++ b/src/System.Data.SqlClient/src/Resources/Strings.resx
@@ -1317,4 +1317,19 @@
   <data name="SQL_ParsingErrorAuthLibraryType" xml:space="preserve"> 
     <value>Internal connection fatal error. Error state: {0}, Authentication Library Type: {1}.</value>
   </data>
+  <data name="SqlFileStream_InvalidPath" xml:space="preserve">
+    <value>The path name is not valid.</value>
+  </data>
+  <data name="SqlFileStream_PathNotValidDiskResource" xml:space="preserve">
+    <value>The path name is invalid or does not point to a disk file.</value>
+  </data>
+  <data name="SqlFileStream_FileAlreadyInTransaction" xml:space="preserve">
+    <value>The process cannot access the file specified because it has been opened in another transaction.</value>
+  </data>
+  <data name="SqlFileStream_InvalidParameter" xml:space="preserve">
+    <value>An invalid parameter was passed to the function.</value>
+  </data>
+  <data name="SqlFileStream_NotSupported" xml:space="preserve">
+    <value>SqlFileStream is not supported on this platform.</value>
+  </data>
 </root>
