--- a/src/System.Security.Cryptography.Pkcs/src/Resources/Strings.resx
+++ b/src/System.Security.Cryptography.Pkcs/src/Resources/Strings.resx
@@ -248,10 +248,10 @@
     <value>The Pkcs12CertBag contents are not an X.509 certificate.</value>
   </data>
   <data name="Cryptography_Pkcs12_PfxIsSealed" xml:space="preserve">
-    <value>The Pkcs12Builder has been sealed and can no longer be modified.</value>
+    <value>The Pkcs12Builder can no longer be modified because one of the Seal methods was already invoked.</value>
   </data>
   <data name="Cryptography_Pkcs12_PfxMustBeSealed" xml:space="preserve">
-    <value>The Pkcs12Builder must be sealed before it can be encoded.</value>
+    <value>One of the Seal methods must be invoked on the Pkcs12Builder before invoking an Encode method.</value>
   </data>
   <data name="Cryptography_Pkcs12_SafeContentsIsEncrypted" xml:space="preserve">
     <value>Cannot enumerate the contents of an encrypted or enveloped Pkcs12SafeContents.</value>
