--- a/src/System.Windows.Extensions/src/Resources/Strings.resx
+++ b/src/System.Windows.Extensions/src/Resources/Strings.resx
@@ -58,25 +58,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ErrorCreateSystemEvents" xml:space="preserve">
-    <value>Failed to create system events window thread.</value>
+  <data name="Cryptography_InvalidHandle" xml:space="preserve">
+    <value>{0} is an invalid handle.</value>
   </data>
-  <data name="ErrorCreateTimer" xml:space="preserve">
-    <value>Cannot create timer.</value>
-  </data>
-  <data name="ErrorGetTempPath" xml:space="preserve">
-    <value>Cannot get temporary file name</value>
-  </data>
-  <data name="ErrorKillTimer" xml:space="preserve">
-    <value>Cannot end timer.</value>
-  </data>
-  <data name="ErrorSystemEventsNotSupported" xml:space="preserve">
-    <value>System event notifications are not supported under the current context. Server processes, for example, may not support global system event notifications.</value>
-  </data>
-  <data name="InvalidLowBoundArgument" xml:space="preserve">
-    <value>'{1}' is not a valid value for '{0}'. '{0}' must be greater than {2}.</value>
-  </data>
-  <data name="PlatformNotSupported_SystemEvents" xml:space="preserve">
-    <value>SystemEvents is not supported on this platform.</value>
+  <data name="Enum_InvalidValue" xml:space="preserve">
+    <value>Enumeration value '{0}' specified in condition mapping is not valid.</value>
   </data>
 </root>
