OidLookup support for Mono.
In Mono, `RSAPKCS1SignatureFormatter` / `RSAPKCS1SignatureDeformatter` lives in `mscorlib.dll`
whereas both `Oid` and `OidGroup` are in `System.dll`, which creates a dependency problem.

The only thing in these two classes that is using `Oid` is an error check and on OSX, the
implementation does not even use `OidGroup`.  After moving all the table data from both
`OidLookup.cs` and `OidLookup.OSX.cs` into a new common `OidTables.cs`, this error check can
now be done without accessing `Oid` or `OidGroup` on OSX.

--- a/src/System.Security.Cryptography.Algorithms/src/Resources/Strings.resx
+++ b/src/System.Security.Cryptography.Algorithms/src/Resources/Strings.resx
@@ -292,6 +292,9 @@
   <data name="Cryptography_NotValidPublicOrPrivateKey" xml:space="preserve">
     <value>Key is not a valid public or private key.</value>
   </data>
+  <data name="Cryptography_Oid_InvalidName" xml:space="preserve">
+    <value>No OID value matches this name.</value>
+  </data>
   <data name="Cryptography_OAEP_Decryption_Failed" xml:space="preserve">
     <value>Error occurred while decoding OAEP padding.</value>
   </data>
