--- a/src/System.Diagnostics.Process/src/Resources/Strings.resx
+++ b/src/System.Diagnostics.Process/src/Resources/Strings.resx
@@ -243,8 +243,8 @@
   <data name="ProcessorAffinityNotSupported" xml:space="preserve">
     <value>Processor affinity for processes or threads is not supported on this platform.</value>
   </data>
-  <data name="ProcessStartIdentityPartiallySupported" xml:space="preserve">
-    <value>Setting Domain, LoadUserProfile, PasswordInClearText and Password is not supported on this platform.</value>
+  <data name="ProcessStartFeaturesNotSupported" xml:space="preserve">
+    <value>{0} field(s) is not supported by "run as another user" feature on this platform.</value>
   </data>
   <data name="RUsageFailure" xml:space="preserve">
     <value>Failed to set or retrieve rusage information. See the error code for OS-specific error information.</value>
