Initial commit, just ot get all the files on Server, this does not compile

--- a/src/Microsoft.VisualBasic/src/Resources/Strings.resx
+++ b/src/Microsoft.VisualBasic/src/Resources/Strings.resx
@@ -1047,4 +1047,7 @@
   <data name="WebNotSupportedOnThisSKU" xml:space="preserve">
     <value>Current target framework does not support web operations.</value>
   </data>
+  <data name="InvalidEnumArgument" xml:space="preserve">
+    <value>The value of argument '{0}' ({1}) is invalid for Enum type '{2}'.</value>
+  </data>
 </root>
