address PR feedback

--- a/src/System.IO.FileSystem/src/Resources/Strings.resx
+++ b/src/System.IO.FileSystem/src/Resources/Strings.resx
@@ -133,7 +133,7 @@
     <value>Invalid handle.</value>
   </data>
   <data name="Arg_MustBeDriveLetterOrRootDir" xml:space="preserve">
-    <value>Drive name must be a root directory ('C:\\') or a drive letter ('C').</value>
+    <value>Drive name must be a root directory ('C:\') or a drive letter ('C').</value>
   </data>
   <data name="Arg_Path2IsRooted" xml:space="preserve">
     <value>Second path fragment must not be a drive or UNC name.</value>
