--- a/src/System.Drawing.Common/src/Resources/Strings.resx
+++ b/src/System.Drawing.Common/src/Resources/Strings.resx
@@ -222,8 +222,8 @@
   <data name="GraphicsBufferQueryFail" xml:space="preserve">
     <value>Screen-compatible bitmap cannot be created. The screen bitmap format cannot be determined.</value>
   </data>
-  <data name="IconIvalidMaskLength" xml:space="preserve">
-    <value>{0} data length expected {1}, read {2}</value>
+  <data name="IconInvalidMaskLength" xml:space="preserve">
+    <value>'{0}' data length expected {1}, read {2}</value>
   </data>
   <data name="ToolboxItemLocked" xml:space="preserve">
     <value>Toolbox item cannot be modified.</value>
