--- a/src/System.ServiceProcess.ServiceController/src/Resources/Strings.resx
+++ b/src/System.ServiceProcess.ServiceController/src/Resources/Strings.resx
@@ -188,7 +188,7 @@
     <value>Service '{0}' is being removed from the system...</value>
   </data>
   <data name="ServiceRemoved" xml:space="preserve">
-    <value>Service '{0}'' was successfully removed from the system.</value>
+    <value>Service '{0}' was successfully removed from the system.</value>
   </data>
   <data name="ControlService" xml:space="preserve">
     <value>Cannot control '{0}' service on computer '{1}'.</value>
