Add CmsSigner.Certificate == null error checking. Attempt to implement SubjectIdentifierType.NoSignature.

--- a/src/System.Security.Cryptography.Pkcs/src/Resources/Strings.resx
+++ b/src/System.Security.Cryptography.Pkcs/src/Resources/Strings.resx
@@ -205,6 +205,9 @@
   <data name="Cryptography_Cms_NoSignerAtIndex" xml:space="preserve">
     <value>The signed cryptographic message does not have a signer for the specified signer index.</value>
   </data>
+  <data name="Cryptography_Cms_RecipientCertificateNotFound" xml:space="preserve">
+    <value>The recipient certificate is not specified.</value>
+  </data>
   <data name="Cryptography_Cms_RecipientNotFound" xml:space="preserve">
     <value>The enveloped-data message does not contain the specified recipient.</value>
   </data>
