--- a/src/System.Security.Cryptography.Pkcs/src/Resources/Strings.resx
+++ b/src/System.Security.Cryptography.Pkcs/src/Resources/Strings.resx
@@ -202,11 +202,11 @@
   <data name="Cryptography_Cms_NoSignerCert" xml:space="preserve">
     <value>No signer certificate was provided. This platform does not implement the certificate picker UI.</value>
   </data>
+  <data name="Cryptography_Cms_NoSignerCertSilent" xml:space="preserve">
+    <value>No signer certificate was provided.</value>
+  </data>
   <data name="Cryptography_Cms_NoSignerAtIndex" xml:space="preserve">
     <value>The signed cryptographic message does not have a signer for the specified signer index.</value>
-  </data>
-  <data name="Cryptography_Cms_RecipientCertificateNotFound" xml:space="preserve">
-    <value>The recipient certificate is not specified.</value>
   </data>
   <data name="Cryptography_Cms_RecipientNotFound" xml:space="preserve">
     <value>The enveloped-data message does not contain the specified recipient.</value>
